--- a/HighLandirect/Views/CustomerListView.xaml
+++ b/HighLandirect/Views/CustomerListView.xaml
@@ -103,15 +103,15 @@
                     <DataGridTextColumn Binding="{Binding Customer.Address1}" Header="住所１" Width="150"/>
                     <DataGridTextColumn Binding="{Binding Customer.Address2}" Header="住所２" Width="150"/>
                     <DataGridTextColumn Binding="{Binding Customer.Phone}" Header="電話番号" Width="100"/>
-                    <DataGridTextColumn Binding="{Binding Customer.LatestSend}" Header="最終荷主日" Width="100" />
-                    <DataGridTextColumn Binding="{Binding Customer.LatestResceive}" Header="最終宛先日" Width="100" />
-                    <DataGridTemplateColumn Header="一覧に出さない" Width="30" >
+                    <DataGridTemplateColumn Header="一覧に出さない" Width="30" SortMemberPath="Customer.Delete" >
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <CheckBox IsChecked="{Binding Customer.Delete}" />
+                                <CheckBox IsChecked="{Binding Path=Customer.Delete, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
+                    <DataGridTextColumn Binding="{Binding Customer.LatestSend}" Header="最終荷主日" Width="100" />
+                    <DataGridTextColumn Binding="{Binding Customer.LatestResceive}" Header="最終宛先日" Width="100" />
                     <DataGridTextColumn Binding="{Binding Customer.MailAddress}" Header="メールアドレス" Width="100"/>
                 </DataGrid.Columns>
             </DataGrid>
