--- a/HighLandirect/Views/CustomerView.xaml
+++ b/HighLandirect/Views/CustomerView.xaml
@@ -59,7 +59,8 @@
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="30" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" 
                               BindingControl="Furigana" MinWidth="100" FontSize="18"
-                              InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native">
+                              InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                              v:GoNextByEnterBehavior.EnterCommand="True">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="LostFocus">
                     <b:LivetCallMethodAction MethodTarget="{Binding}" MethodName="CustNameTextBox_LostFocus" />
@@ -81,10 +82,12 @@
         <TextBox Name="Furigana" Text="{Binding Customer.Furigana, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="30" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" FontSize="16" 
-                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"/>
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                 v:GoNextByEnterBehavior.EnterCommand="True"/>
         <TextBox Text="{Binding Customer.Keisho, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="1" Grid.Column="2" Grid.Row="1" MinWidth="30" FontSize="16" Grid.ColumnSpan="1" Margin="2,0,0,0"  />
+                 MaxLength="1" Grid.Column="2" Grid.Row="1" MinWidth="30" FontSize="16" Grid.ColumnSpan="1" Margin="2,0,0,0"
+                 TabIndex="100"/>
 
         <Label Content="郵便番号" Grid.Column="3" />
         <TextBox Name="PostalCD" Text="{Binding Customer.PostalCD, Converter={x:Static Converters:PostalCdConverter.Default}, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
@@ -108,13 +111,15 @@
         <TextBox Name="Address1" Text="{Binding Customer.Address1, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="200" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" DataContext="{Binding}"
-                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native">
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                 v:GoNextByEnterBehavior.EnterCommand="True">
         </TextBox>
         <Label Content="住所２" Grid.Column="3" Grid.Row="3" />
         <TextBox Text="{Binding Customer.Address2, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="200" Grid.Column="4" Grid.Row="3" HorizontalAlignment="Stretch" DataContext="{Binding}"
-                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native">
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                 v:GoNextByEnterBehavior.EnterCommand="True">
             <i:Interaction.Triggers>
                 <l:InteractionMessageTrigger Messenger="{Binding Messenger}" MessageKey="SetFocus">
                     <b:SetFocusAction />
@@ -128,19 +133,26 @@
         <TextBox Text="{Binding Customer.Address3, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="200" Grid.Column="4" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
-                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native" />
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                 v:GoNextByEnterBehavior.EnterCommand="True"/>
         <Label Content="住所４" Grid.Column="3" Grid.Row="5" />
         <TextBox Text="{Binding Customer.Address4, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="200" Grid.Column="4" Grid.Row="5" HorizontalAlignment="Stretch" DataContext="{Binding}"
-                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native" />
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                 v:GoNextByEnterBehavior.EnterCommand="True"/>
         
         <Label Content="電話番号" Grid.Row="4" />
         <TextBox Text="{Binding Customer.Phone, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="13" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
-                 InputMethod.PreferredImeState="Off" />
-
+                 InputMethod.PreferredImeState="Off"
+                 v:GoNextByEnterBehavior.EnterCommand="True"/>
+        <TextBox Text="{Binding Customer.Memo, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
+                        ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                 MaxLength="200" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
+                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
+                 AcceptsReturn="True" />
         <Label Content="FAX" Grid.Row="5" />
         <TextBox Text="{Binding Customer.Fax, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
@@ -155,11 +167,6 @@
                  MaxLength="200" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Stretch" DataContext="{Binding}" />
         
         <Label Content="メモ" Grid.Row="8" />
-        <TextBox Text="{Binding Customer.Memo, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
-                        ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" DataContext="{Binding}"
-                 InputMethod.PreferredImeState="On" InputMethod.PreferredImeConversionMode="FullShape,Native"
-                 AcceptsReturn="True" />
         <Label Content="最終荷主日" Grid.Row="7" Grid.Column="0"/>
         <TextBox MaxLength="200" Text="{Binding Customer.LatestSend, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" Grid.Column="1" Grid.Row="7" />
         <Label Content="最終宛先日" Grid.Row="7" Grid.Column="3"/>
