--- a/HighLandirect/Views/OrderListView.xaml
+++ b/HighLandirect/Views/OrderListView.xaml
@@ -28,7 +28,9 @@
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
                 <!--スタイルが適用されない。仕方ないので個別にHeightとFontSizeを設定する。-->
-                <Button Command="{Binding PrintCommand}" Content="印刷" Width="100" Height="30"
+                <Button Command="{Binding PrintCommand}" Content="印刷（ヤマト）" Width="150" Height="30"
+                        FontSize="18" Margin="10,0,0,0" />
+                <Button Command="{Binding PrintCommandSagawa}" Content="印刷（佐川）" Width="150" Height="30"
                         FontSize="18" Margin="10,0,0,0" />
                 <Button Command="{Binding RemoveCommand}" Content="削除" Height="30" FontSize="18"
                          Margin="10,0,0,0" />
